--- a/html-pj/project-3/nintendo.html
+++ b/html-pj/project-3/nintendo.html
@@ -105,8 +105,11 @@
                 <ul class="sec-2-2-txt">
                     <li class="sec-2-2-box sec-2-2-1">
                         <ul>
-                            <li>
-                                <img src="./img/sec-2/sec2-2/2-2-1/sec-2-1-fr-2.png" alt="" class="front">
+                            <li class="front-hidden">
+                                <div>
+                                    <img src="./img/sec-2/sec2-2/2-2-1/sec-2-1-fr-2.png" alt="" class="front">
+                                </div>
+
                             </li>
                             <li>
                                 <img src="./img/sec-2/sec2-2/2-2-1/sec-2-1-bg.png" alt="">
@@ -128,8 +131,9 @@
                             <li class="front-one">
                                 <ul>
                                     <li>
-                                        <img src="./img/sec-2/sec2-2/2-2-2/sec-2-1-fr-1.svg" alt="" class="front-2-1-fr-1 ">
-                                    </li >
+                                        <img src="./img/sec-2/sec2-2/2-2-2/sec-2-1-fr-1.svg" alt=""
+                                            class="front-2-1-fr-1 ">
+                                    </li>
                                     <li>
                                         <img src="./img/sec-2/sec2-2/2-2-2/sec-2-2-fr-1.png" alt=""
                                             class="front-2-2-fr-1 hidden">
@@ -141,14 +145,16 @@
                             <li class="front-two">
                                 <ul>
                                     <li>
-                                        <img src="./img/sec-2/sec2-2/2-2-2/sec-2-1-fr-2.png" alt="" class="front-2-1-fr-2 ">
-                                    </li >
+                                        <img src="./img/sec-2/sec2-2/2-2-2/sec-2-1-fr-2.png" alt=""
+                                            class="front-2-1-fr-2 ">
+                                    </li>
                                     <li>
                                         <img src="./img/sec-2/sec2-2/2-2-2/sec-2-2-fr-2.png" alt=""
                                             class="front-2-2-fr-2 hidden">
                                     </li>
                                 </ul>
                             </li>
+
                         </ul>
 
                         <img src="./img/sec-2/sec2-2/2-2-2/sec-2-1-bg(font).png" alt="" class="back">
@@ -160,7 +166,7 @@
 
                         <!-- 텍스트 부분 -->
                         <ul class="text">
-                            <li class="text-one ">
+                            <li class="text-one text-st">
                                 <ul class="text-ul">
                                     <li class="title">Joy-Con</li>
                                     <li class="sub-1">
@@ -169,12 +175,15 @@
                                         <br>건네어 “나누어” 잡으면, 언제, 어디서든, 대전이나 협력 플레이를
                                         <br>즐길 수 있습니다.
                                     </li>
+                                    <span></span>
                                 </ul>
+
                             </li>
 
-                            <li class="text-two hidden">
+                            <li class="text-two text-st hidden">
                                 <ul class="text-ul ">
-                                    <li class="title">Pro - Controller</li>
+                                    <li class="title">Pro <span>- Controller</span>
+                                    </li>
                                     <li class="sub-1">
                                         잡기 편한 그립형 디자인 때문에, TV 모드나 테이블 모드에서
                                         <br>게임을 장시간 쾌적하게 플레이할 수 있는 무선 컨트롤러.
@@ -182,22 +191,31 @@
                                         <br>특별 디자인의 Nintendo Switch Pro 컨트롤러입니다.
                                     </li>
                                 </ul>
+                                <span></span>
                             </li>
-                            <span></span>
                         </ul>
                     </li>
-
-
-
                     <li class="sec-2-2-box sec-2-2-3">
+                        <ul>
+                            <li><img src="./img/sec-2/sec2-2/2-2-3/sec-2-2-3-fr-1.png" alt="" class="fr-1"></li>
+                            <li><img src="./img/sec-2/sec2-2/2-2-3/sec-2-2-3-fr-2.png" alt="" class="fr-2"></li>
+                            <li><img src="./img/sec-2/sec2-2/2-2-3/sec-2-2-3-fr-3.jpg" alt="" class="fr-3"></li>
+                            <li><img src="./img/sec-2/sec2-2/2-2-3/sec-2-2-3-bg.png" alt="" class="bg-1"></li>
+                            <li><img src="./img/sec-2/sec2-2/2-2-3/sec-2-2-3-font.svg" alt="" class="bg-font"></li>
+                        </ul>
                         <ul class="text">
-                            <li>test3</li>
-                            <li>화면의 베젤이 슬림해지면서 넓어진<br>
-                                7잋니 OLED디스플레이</li>
-                            <li>화면의 베젤이 슬림해 지면서 7인치로 넓어진 OLED 디스플레이,<br>
-                                바람에 나부끼는 풀숲, 몰려오는 적, 최고 속도로 달려나가는 카트 등,<br>
-                                다양한 게임 속 세계를 선명한 색감으로 그려냅니다.
+                            <li class="title">
+                                <ul>
+                                    <li class="title-1">유선 LAN 단자를 탑재한</li>
+                                    <li class="title-2">Doctrine Station</li>
+                                </ul>
                             </li>
+                            <li class="sub-1">「Nintendo Switch (OLED 모델)」에 포함된 독에는,<br>
+                                2개의 USB 단자와 TV에 접속하기 위한 HDMI 단자에 더해<br>
+                                새롭게 유선 LAN 단자를 탑재하여,<br>
+                                TV 모드에서 더욱 안정된 온라인 플레이를 즐길 수 있습니다.
+                            </li>
+                            <span></span>
                         </ul>
                     </li>
                 </ul>
@@ -208,8 +226,151 @@
     </section>
     <section class="sec-3">
         <div class="sec-3-1">
+            <span></span>
             <p>Edition lineup</p>
+            <button class="scroll-btn left">&lt;</button>
+            <div class="item-list-container">
+                <ul class="item-list">
+                    <li class="item-box box-1">
+                        <ul>
+                            <li class="text">
+                                <ul>
+                                    <li class="title-1">젤다 왕국의 눈물 에디션</li>
+                                    <li class="title-2">Nintendo Switch (OLED 모델)</li>
+                                </ul>
+                            </li>
+                            <li><img src="./img/sec-3/item-1.png" alt=""></li>
+                        </ul>
+                    </li>
+                    <li class="item-box box-1">
+                        <ul>
+                            <li class="text">
+                                <ul>
+                                    <li class="title-1">젤다 왕국의 눈물 에디션</li>
+                                    <li class="title-2">Nintendo Switch (OLED 모델)</li>
+                                </ul>
+                            </li>
+                            <li><img src="./img/sec-3/item-1.png" alt=""></li>
+                        </ul>
+                    </li>
+                    <li class="item-box box-1">
+                        <ul>
+                            <li class="text">
+                                <ul>
+                                    <li class="title-1">젤다 왕국의 눈물 에디션</li>
+                                    <li class="title-2">Nintendo Switch (OLED 모델)</li>
+                                </ul>
+                            </li>
+                            <li><img src="./img/sec-3/item-1.png" alt=""></li>
+                        </ul>
+                    </li>
+                    <li class="item-box box-1">
+                        <ul>
+                            <li class="text">
+                                <ul>
+                                    <li class="title-1">젤다 왕국의 눈물 에디션</li>
+                                    <li class="title-2">Nintendo Switch (OLED 모델)</li>
+                                </ul>
+                            </li>
+                            <li><img src="./img/sec-3/item-1.png" alt=""></li>
+                        </ul>
+                    </li>
+                    <li class="item-box box-1">
+                        <ul>
+                            <li class="text">
+                                <ul>
+                                    <li class="title-1">젤다 왕국의 눈물 에디션</li>
+                                    <li class="title-2">Nintendo Switch (OLED 모델)</li>
+                                </ul>
+                            </li>
+                            <li><img src="./img/sec-3/item-1.png" alt=""></li>
+                        </ul>
+                    </li>
+                    <li class="item-box box-1">
+                        <ul>
+                            <li class="text">
+                                <ul>
+                                    <li class="title-1">젤다 왕국의 눈물 에디션</li>
+                                    <li class="title-2">Nintendo Switch (OLED 모델)</li>
+                                </ul>
+                            </li>
+                            <li><img src="./img/sec-3/item-1.png" alt=""></li>
+                        </ul>
+                    </li>
+                    <li class="item-box box-1">
+                        <ul>
+                            <li class="text">
+                                <ul>
+                                    <li class="title-1">젤다 왕국의 눈물 에디션</li>
+                                    <li class="title-2">Nintendo Switch (OLED 모델)</li>
+                                </ul>
+                            </li>
+                            <li><img src="./img/sec-3/item-1.png" alt=""></li>
+                        </ul>
+                    </li>
+
+                </ul>
+            </div>
+            <button class="scroll-btn right">&gt;</button>
         </div>
+    </section>
+    <section class="sec-4">
+        <ul class="text">
+            <li class="text-list list-1">
+                <span></span>
+                <p class="title">한국닌텐도</p>
+                <ul class="sub-menu">
+                    <li>-회사개요</li>
+                    <li>-찾아오시는 길</li>
+                </ul>
+            </li>
+            <li class="text-list list-2">
+                <span></span>
+                <p class="title">본체/amiibo</p>
+                <ul class="sub-menu">
+                    <li>-Nintendo Switch</li>
+                    <li>-amiibo</li>
+                </ul>
+            </li>
+            <li class="text-list list-3">
+                <span></span>
+                <p class="title">소프트웨어</p>
+                <ul class="sub-menu">
+                    <li>-Nintendo Switch 소프트웨어</li>
+                    <li>-소프트웨어 발매 스케줄</li>
+                    <li>-스마트폰용 앱</li>
+                </ul>
+            </li>
+            <li class="text-list list-4">
+                <span></span>
+                <p class="title">고객지원</p>
+                <ul class="sub-menu">
+                    <li>-Nintendo Switch</li>
+                    <li>-닌텐도 3Ds</li>
+                    <li>-고객지원 홈페이지</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="sec-5">
+        <ul class="last-list">
+            <li class="suport">
+                <div>고객지원:<span>1670-9900</span></div>
+                <div class="sub">(평일 오전 9시 30분~오후 5시 30분) <br>
+                    ※ 토/일/공휴일/회사 정기휴일 및 특별휴일 제외
+                </div>
+            </li>
+            <li class="rule">
+                <ul>
+                    <li class="grid grid-1"><a href="#">이용약관</a></li>
+                    <li class="grid grid-2"><a href="#">개인정보처리방침</a></li>
+                </ul>
+                <div class="grid grid-3">ⓒ 2006 Nintendo of Korea Co., Ltd. All Rights Reserved.
+                    <br>
+                    상호명 : 한국닌텐도주식회사 대표자명 : 미우라 타카히로 사업자등록번호 : 120-87-03578
+                </div>
+            </li>
+        </ul>
     </section>
     <script src="./css/prj2.js"></script>
     <script src="./css/font-anime.js"></script>
