--- a/port.html
+++ b/port.html
@@ -151,7 +151,7 @@
         <div class="test test2">
           <div class="flex">
             <div class="img">
-              <img class="_1-2" src="./img/face.png">
+              <!-- <img class="_1-2" src="./img/face.png"> -->
             </div>
             <div class="gird-7-txt">
               <div class="grid-7-title">
